[COLLECTIONS-692] Replace use of deprecated Class#newInstance() #49.