@@ -560,7 +560,7 @@ public class MultiValueMap<K, V> extends AbstractMapDecorator<K, Object> impleme
         @Override
         public T create() {
             try {
-                return clazz.newInstance();
+                return clazz.getDeclaredConstructor().newInstance();
             } catch (final Exception ex) {
                 throw new FunctorException("Cannot instantiate class: " + clazz, ex);
             }
